Add a line to the README from inside GitHub.
More detailed description text.

--- a/project.html
+++ b/project.html
@@ -1,4 +1,8 @@
-My CSSI Project
-this is my CSSI project. It may be apparent that I know nothing about this project
-My section
-This is a section about my project
+#My CSSI Project
+This is my CSSI project. It may be apparent that I know nothing about this project.
+
+#My section
+This is a section about my project.
+
+#My GitHub Section
+This section was added on GitHub I would like to check it out locally.
